--- a/basics.html
+++ b/basics.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Основи C++</title>
     <link rel="stylesheet" href="style.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
     <header>
@@ -16,6 +17,11 @@
                 <li><a href="operators.html">Оператори</a></li>
                 <li><a href="functions.html">Функції</a></li>
                 <li><a href="contact.html">Контакти</a></li>
+                <li><select onchange="changeLanguage(this.value)">
+                    <option value="basics.html">UA</option>
+                    <option value="basics.en.html">EN</option>
+                  </select>
+                </li>
             </ul>
         </nav>
     </header>
