--- a/basics.en.html
+++ b/basics.en.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basics of C++</title>
+    <title>Basics of JavaScript</title>
     <link rel="stylesheet" href="style.css">
     <script src="js/script.en.js"></script>
 </head>
@@ -27,19 +27,19 @@
         </nav>
     </header>
     <div class="div-all">
-        <h1>Basics of C++</h1>
+        <h1>Basics of JavaScript</h1>
         <section>
-            <h2>Introduction to C++</h2>
-            <p>C++ is a powerful programming language used for developing system and application software.</p>
+            <h2>Introduction to JavaScript</h2>
+            <p>JavaScript is a dynamic programming language that is widely used for web development. It allows developers to add interactive elements to websites and build powerful web applications.</p>
             <ul>
-                <li>High performance</li>
-                <li>Object-oriented programming</li>
-                <li>Wide support of standard libraries</li>
+                <li>Client-side scripting language</li>
+                <li>Can manipulate HTML and CSS</li>
+                <li>Supports asynchronous programming</li>
             </ul>
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 C++ Language Reference</p>
+        <p>&copy; 2024 JavaScript Language Reference</p>
     </footer>
 </body>
 </html>
