--- a/basics.html
+++ b/basics.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Основи C++</title>
+    <title>Основи JavaScript</title>
     <link rel="stylesheet" href="style.css">
     <script src="js/script.js"></script>
 </head>
@@ -12,7 +12,7 @@
         <nav>
             <ul class="nav-1">
                 <li><a href="index.html">Головна</a></li>
-                <li><a href="basics.html">Основи </a></li>
+                <li><a href="basics.html">Основи</a></li>
                 <li><a href="syntax.html">Синтаксис</a></li>
                 <li><a href="operators.html">Оператори</a></li>
                 <li><a href="functions.html">Функції</a></li>
@@ -26,19 +26,19 @@
         </nav>
     </header>
     <div class="div-all">
-        <h1>Основи C++</h1>
+        <h1>Основи JavaScript</h1>
     <section>
-        <h2>Основи мови C++</h2>
-        <p>C++ є потужною мовою програмування, яка використовується для розробки системного і прикладного програмного забезпечення.</p>
+        <h2>Основи мови JavaScript</h2>
+        <p>JavaScript є однією з найбільш популярних мов програмування для веб-розробки. Вона використовується для створення динамічних веб-сторінок та інтерактивних інтерфейсів.</p>
         <ul>
-            <li>Висока продуктивність</li>
-            <li>Об'єктно-орієнтоване програмування</li>
-            <li>Широка підтримка стандартних бібліотек</li>
+            <li>Клієнтська мова</li>
+            <li>Підтримує об'єктно-орієнтоване програмування</li>
+            <li>Широка підтримка браузерів та середовищ виконання</li>
         </ul>
     </section>
 </div>
     <footer>
-        <p>&copy; 2024 Довідник з мови C++</p>
+        <p>&copy; 2024 Довідник з мови JavaScript</p>
     </footer>
 </body>
 </html>
