--- a/contact.en.html
+++ b/contact.en.html
@@ -39,7 +39,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 C++ Language Reference</p>
+        <p>&copy; 2024 JavaScript Reference Guide</p>
     </footer>
 </body>
 </html>
