--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     </section>
 </div>
     <footer>
-        <p>&copy; 2024 Довідник з мови C++</p>
+        <p>&copy; 2024 Довідник з мови JavaScript</p>
     </footer>
 </body>
 </html>
