--- a/functions.html
+++ b/functions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Функції C++</title>
+    <title>Функції JavaScript</title>
     <link rel="stylesheet" href="style.css">
     <script src="js/script.js"></script>
 </head>
@@ -19,7 +19,7 @@
                 <li><a href="contact.html">Контакти</a></li>
                 <li><select onchange="changeLanguage(this.value)">
                     <option value="functions.html">UA</option>
-                    <option value="functions.en.html">EU</option>
+                    <option value="functions.en.html">EN</option>
                   </select>
                 </li>
             </ul>
@@ -27,32 +27,31 @@
     </header>
     <section>
         <div class="div-all">
-        <h1>Функції C++</h1>
-        <h2>Функції C++</h2>
-        <p>Функції використовуються для виконання коду, що повторюється:</p>
-        <ul>
-            <li>Функція з поверненням значення</li>
-            <li>Функція без повернення значення</li>
-        </ul>
-        <table border="1">
-            <tr>
-                <th>Тип</th>
-                <th>Приклад</th>
-            </tr>
-            <tr>
-                <td>Функція з поверненням</td>
-                    <td><code>int add(int a, int b) { return a + b; }</code></td>
+            <h1>Функції JavaScript</h1>
+            <h2>Функції JavaScript</h2>
+            <p>Функції використовуються для виконання коду, що повторюється:</p>
+            <ul>
+                <li>Функція з поверненням значення</li>
+                <li>Функція без повернення значення</li>
+            </ul>
+            <table border="1">
+                <tr>
+                    <th>Тип</th>
+                    <th>Приклад</th>
+                </tr>
+                <tr>
+                    <td>Функція з поверненням</td>
+                    <td><code>function add(a, b) { return a + b; }</code></td>
                 </tr>
                 <tr>
                     <td>Функція без повернення</td>
-                    <td><code>void printMessage() { cout << "Hello"; }</code></td>
+                    <td><code>function printMessage() { console.log("Hello"); }</code></td>
                 </tr>
             </table>
-        </section>
         </div>
-        <footer>
-            <p>&copy; 2024 Довідник з мови C++</p>
-        </footer>
-    </body>
-    </html>
-    
+    </section>
+    <footer>
+        <p>&copy; 2024 Довідник з мови JavaScript</p>
+    </footer>
+</body>
+</html>
