--- a/index.en.html
+++ b/index.en.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++ Reference Guide</title>
+    <title>JavaScript Reference Guide</title>
     <link rel="stylesheet" href="style.css">
-    <script src="js/script.en.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <header>
@@ -27,17 +27,29 @@
         </nav>
     </header>
     <div class="div-all">
-        <h1>C++ Reference Guide</h1>
+        <h1>JavaScript Reference Guide</h1>
         <section>
             <h2>Welcome!</h2>
-            <p>This website contains reference information on the C++ programming language.</p>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/ISO_C%2B%2B_Logo.svg" id="C++ Introduction" style="width:200px;" 
+            <p>This website contains reference information on the JavaScript programming language.</p>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" id="JavaScript Introduction" style="width:200px;" 
             onmouseover="this.style.width='200px';" 
             onmouseout="this.style.width='150px';">
+            <h2>Interesting Facts about JavaScript</h2>
+            <ul>
+                <li>JavaScript was developed by Brendan Eich in 1995.</li>
+                <li>The language was initially named Mocha, then LiveScript, and only later became JavaScript.</li>
+                <li>JavaScript is one of the main languages for front-end development.</li>
+            </ul>
+            <h2>Notable JavaScript Projects</h2>
+            <ul>
+                <li><strong>React:</strong> a popular library for building user interfaces.</li>
+                <li><strong>Node.js:</strong> a runtime for executing JavaScript on the server.</li>
+                <li><strong>Angular:</strong> one of the most powerful frameworks for web applications.</li>
+            </ul>
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 C++ Reference Guide</p>
+        <p>&copy; 2024 JavaScript Reference Guide</p>
     </footer>
 </body>
 </html>
