--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Довідник з мови C++</title>
+    <title>Довідник з мови JavaScript</title>
     <link rel="stylesheet" href="style.css">
     <script src="js/script.js"></script>
 </head>
@@ -26,18 +26,29 @@
         </nav>
     </header>
     <div class="div-all">
-        <h1>Довідник з мови C++</h1>
+        <h1>Довідник з мови JavaScript</h1>
     <section>
         <h2>Ласкаво просимо!</h2>
-        <p>Цей сайт містить довідкову інформацію з мови програмування C++.</p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/ISO_C%2B%2B_Logo.svg" id="C++ Introduction" style="width:200px;" 
+        <p>Цей сайт містить довідкову інформацію з мови програмування JavaScript.</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" id="JavaScript Introduction" style="width:200px;" 
         onmouseover="this.style.width='200px';" 
         onmouseout="this.style.width='150px';">
-          
+        <h2>Цікаві факти про JavaScript</h2>
+        <ul>
+            <li>JavaScript був розроблений Брендоном Айком у 1995 році.</li>
+            <li>Спочатку мова називалася Mocha, потім LiveScript, і лише згодом JavaScript.</li>
+            <li>JavaScript є однією з основних мов для фронтенд-розробки.</li>
+        </ul>
+        <h2>Відомі проекти на JavaScript</h2>
+        <ul>
+            <li><strong>React:</strong> популярна бібліотека для створення інтерфейсів користувача.</li>
+            <li><strong>Node.js:</strong> середовище для виконання JavaScript на сервері.</li>
+            <li><strong>Angular:</strong> один із найбільш потужних фреймворків для веб-додатків.</li>
+        </ul>
     </section>
     </div>
     <footer>
-        <p>&copy; 2024 Довідник з мови C++</p>
+        <p>&copy; 2024 Довідник з мови JavaScript</p>
     </footer>
 </body>
 </html>
