--- a/functions.en.html
+++ b/functions.en.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Functions in C++</title>
+    <title>JavaScript Functions</title>
     <link rel="stylesheet" href="style.css">
-    <script src="js/script.en.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <header>
         <nav>
             <ul class="nav-1">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.en.html">Home</a></li>
                 <li><a href="basics.en.html">Basics</a></li>
                 <li><a href="syntax.en.html">Syntax</a></li>
                 <li><a href="operators.en.html">Operators</a></li>
@@ -28,12 +28,12 @@
     </header>
     <section>
         <div class="div-all">
-            <h1>Functions in C++</h1>
-            <h2>Functions in C++</h2>
-            <p>Functions are used to execute code that is repeated:</p>
+            <h1>JavaScript Functions</h1>
+            <h2>JavaScript Functions</h2>
+            <p>Functions are used to execute repetitive code:</p>
             <ul>
-                <li>Function with a return value</li>
-                <li>Function without a return value</li>
+                <li>Function with return value</li>
+                <li>Function without return value</li>
             </ul>
             <table border="1">
                 <tr>
@@ -42,17 +42,17 @@
                 </tr>
                 <tr>
                     <td>Function with return</td>
-                    <td><code>int add(int a, int b) { return a + b; }</code></td>
+                    <td><code>function add(a, b) { return a + b; }</code></td>
                 </tr>
                 <tr>
                     <td>Function without return</td>
-                    <td><code>void printMessage() { cout << "Hello"; }</code></td>
+                    <td><code>function printMessage() { console.log("Hello"); }</code></td>
                 </tr>
             </table>
         </div>
     </section>
     <footer>
-        <p>&copy; 2024 C++ Language Reference</p>
+        <p>&copy; 2024 JavaScript Reference Guide</p>
     </footer>
 </body>
 </html>
