--- a/operators.en.html
+++ b/operators.en.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Operators in C++</title>
+    <title>JavaScript Operators</title>
     <link rel="stylesheet" href="style.css">
-    <script src="js/script.en.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <header>
         <nav>
             <ul class="nav-1">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.en.html">Home</a></li>
                 <li><a href="basics.en.html">Basics</a></li>
                 <li><a href="syntax.en.html">Syntax</a></li>
                 <li><a href="operators.en.html">Operators</a></li>
@@ -27,15 +27,16 @@
         </nav>
     </header>
     <div class="div-all">
-        <h1>Operators in C++</h1>
+        <h1>JavaScript Operators</h1>
         <section>
-            <h2>Operators in C++</h2>
-            <p>C++ has various types of operators:</p>
+            <h2>JavaScript Operators</h2>
+            <p>JavaScript also has various types of operators:</p>
             <ul>
                 <li>Arithmetic: +, -, *, /</li>
                 <li>Logical: &&, ||, !</li>
-                <li>Comparison: ==, !=, >, <</li>
+                <li>Comparison Operators: ==, !=, >, <</li>
             </ul>
+
             <label for="num1">First Number:</label>
             <input type="number" id="num1" value="15">
             <br>
@@ -50,7 +51,7 @@
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 C++ Language Reference</p>
+        <p>&copy; 2024 JavaScript Reference Guide</p>
     </footer>
 </body>
 </html>
