--- a/syntax.en.html
+++ b/syntax.en.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Syntax of C++</title>
+    <title>JavaScript Syntax</title>
     <link rel="stylesheet" href="style.css">
-    <script src="js/script.en.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <header>
         <nav>
             <ul class="nav-1">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.en.html">Home</a></li>
                 <li><a href="basics.en.html">Basics</a></li>
                 <li><a href="syntax.en.html">Syntax</a></li>
                 <li><a href="operators.en.html">Operators</a></li>
@@ -27,10 +27,10 @@
         </nav>
     </header>
     <div class="div-all">
-        <h1>Syntax of C++</h1>
+        <h1>JavaScript Syntax</h1>
         <section>
-            <h2>Syntax of C++</h2>
-            <p>The C++ language has a clear syntax that includes:</p>
+            <h2>JavaScript Syntax</h2>
+            <p>The JavaScript language has a simple and flexible syntax that includes:</p>
             <ul>
                 <li>Variable declarations</li>
                 <li>Function creation</li>
@@ -44,8 +44,8 @@
                 </tr>
                 <tr>
                     <td>Variable Declaration</td>
-                    <td>type name;</td>
-                    <td>int x;</td>
+                    <td>let/const name;</td>
+                    <td>let x;</td>
                 </tr>
                 <tr>
                     <td>Assignment</td>
@@ -53,10 +53,22 @@
                     <td>x = 10;</td>
                 </tr>
             </table>
+            <section id="examples">
+                <h2>Practical Examples</h2>
+                <pre>
+                    <code>
+// Example: Calculating factorial
+function factorial(n) {
+    if (n <= 1) return 1;
+    return n * factorial(n - 1);
+}
+                    </code>
+                </pre>
+            </section>
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 C++ Language Reference</p>
+        <p>&copy; 2024 JavaScript Reference Guide</p>
     </footer>
 </body>
 </html>
