--- a/basics.en.html
+++ b/basics.en.html
@@ -24,10 +24,13 @@
                     </select>
                 </li>
             </ul>
+            <!-- Іконка меню -->
+            <div class="menu-icon" onclick="toggleMenu()">
+                &#9776;
+            </div> 
         </nav>
     </header>
     <div class="div-all">
-        <h1>Basics of JavaScript</h1>
         <section>
             <h2>Introduction to JavaScript</h2>
             <p>JavaScript is a dynamic programming language that is widely used for web development. It allows developers to add interactive elements to websites and build powerful web applications.</p>
