--- a/basics.html
+++ b/basics.html
@@ -23,10 +23,13 @@
                   </select>
                 </li>
             </ul>
+            <!-- Іконка меню -->
+            <div class="menu-icon" onclick="toggleMenu()">
+                &#9776;
+            </div> 
         </nav>
     </header>
     <div class="div-all">
-        <h1>Основи JavaScript</h1>
     <section>
         <h2>Основи мови JavaScript</h2>
         <p>JavaScript є однією з найбільш популярних мов програмування для веб-розробки. Вона використовується для створення динамічних веб-сторінок та інтерактивних інтерфейсів.</p>
