--- a/functions.html
+++ b/functions.html
@@ -23,11 +23,14 @@
                   </select>
                 </li>
             </ul>
+            <!-- Іконка меню -->
+            <div class="menu-icon" onclick="toggleMenu()">
+                &#9776;
+            </div> 
         </nav>
     </header>
     <section>
         <div class="div-all">
-            <h1>Функції JavaScript</h1>
             <h2>Функції JavaScript</h2>
             <p>Функції використовуються для виконання коду, що повторюється:</p>
             <ul>
