--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                   </select>
                 </li>
             </ul>
+            <!-- Іконка меню -->
+            <div class="menu-icon" onclick="toggleMenu()">
+                &#9776;
+            </div> 
         </nav>
     </header>
     <div class="div-all">
