--- a/syntax.html
+++ b/syntax.html
@@ -23,10 +23,13 @@
                   </select>
                 </li>
             </ul>
+            <!-- Іконка меню -->
+            <div class="menu-icon" onclick="toggleMenu()">
+                &#9776;
+            </div> 
         </nav>
     </header>
     <div class="div-all">
-        <h1>Синтаксис JavaScript</h1>
     <section>
         <h2>Синтаксис JavaScript</h2>
         <p>Мова JavaScript має простий і гнучкий синтаксис, що включає:</p>
