--- a/functions.en.html
+++ b/functions.en.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Functions</title>
     <link rel="stylesheet" href="style.css">
-    <script src="js/script.js"></script>
+    <script src="js/script.en.js"></script>
 </head>
 <body>
     <header>
@@ -24,11 +24,14 @@
                     </select>
                 </li>
             </ul>
+            <!-- Іконка меню -->
+            <div class="menu-icon" onclick="toggleMenu()">
+                &#9776;
+            </div> 
         </nav>
     </header>
     <section>
         <div class="div-all">
-            <h1>JavaScript Functions</h1>
             <h2>JavaScript Functions</h2>
             <p>Functions are used to execute repetitive code:</p>
             <ul>
