--- a/index.en.html
+++ b/index.en.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Reference Guide</title>
     <link rel="stylesheet" href="style.css">
-    <script src="js/script.js"></script>
+    <script src="js/script.en.js"></script>
 </head>
 <body>
     <header>
@@ -24,6 +24,10 @@
                     </select>
                 </li>
             </ul>
+            <!-- Іконка меню -->
+            <div class="menu-icon" onclick="toggleMenu()">
+                &#9776;
+            </div> 
         </nav>
     </header>
     <div class="div-all">
