--- a/operators.html
+++ b/operators.html
@@ -23,10 +23,13 @@
                     </select>
                 </li>
             </ul>
+            <!-- Іконка меню -->
+            <div class="menu-icon" onclick="toggleMenu()">
+                &#9776;
+            </div> 
         </nav>
     </header>
     <div class="div-all">
-        <h1>Оператори JavaScript</h1>
     <section>
         <h2>Оператори JavaScript</h2>
         <p>JavaScript також має різні типи операторів:</p>
