--- a/syntax.en.html
+++ b/syntax.en.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Syntax</title>
     <link rel="stylesheet" href="style.css">
-    <script src="js/script.js"></script>
+    <script src="js/script.en.js"></script>
 </head>
 <body>
     <header>
@@ -24,10 +24,13 @@
                     </select>
                 </li>
             </ul>
+            <!-- Іконка меню -->
+            <div class="menu-icon" onclick="toggleMenu()">
+                &#9776;
+            </div> 
         </nav>
     </header>
     <div class="div-all">
-        <h1>JavaScript Syntax</h1>
         <section>
             <h2>JavaScript Syntax</h2>
             <p>The JavaScript language has a simple and flexible syntax that includes:</p>
