--- a/basics.en.html
+++ b/basics.en.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basics of JavaScript</title>
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/1200px-Unofficial_JavaScript_logo_2.svg.png">
     <link rel="stylesheet" href="style.css">
     <script src="js/script.en.js"></script>
 </head>
@@ -40,6 +41,10 @@
                 <li>Supports asynchronous programming</li>
             </ul>
         </section>
+        <video width="320" height="240" controls autoplay loop muted>
+            <source src="video/video_react js.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
     </div>
     <footer>
         <p>&copy; 2024 JavaScript Language Reference</p>
