--- a/functions.en.html
+++ b/functions.en.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Functions</title>
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/1200px-Unofficial_JavaScript_logo_2.svg.png">
     <link rel="stylesheet" href="style.css">
     <script src="js/script.en.js"></script>
 </head>
@@ -30,8 +31,8 @@
             </div> 
         </nav>
     </header>
-    <section>
         <div class="div-all">
+    <section>
             <h2>JavaScript Functions</h2>
             <p>Functions are used to execute repetitive code:</p>
             <ul>
@@ -52,8 +53,10 @@
                     <td><code>function printMessage() { console.log("Hello"); }</code></td>
                 </tr>
             </table>
-        </div>
     </section>
+    <br>
+    <iframe width="330" height="200" src="https://www.youtube.com/embed/847iSyAkEFk" title="Уроки JavaScript з нуля / #10 – Функції у мові JavaScript" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
     <footer>
         <p>&copy; 2024 JavaScript Reference Guide</p>
     </footer>
