--- a/functions.html
+++ b/functions.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Функції JavaScript</title>
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/1200px-Unofficial_JavaScript_logo_2.svg.png">
     <link rel="stylesheet" href="style.css">
     <script src="js/script.js"></script>
 </head>
@@ -29,8 +30,8 @@
             </div> 
         </nav>
     </header>
+    <div class="div-all">
     <section>
-        <div class="div-all">
             <h2>Функції JavaScript</h2>
             <p>Функції використовуються для виконання коду, що повторюється:</p>
             <ul>
@@ -51,8 +52,10 @@
                     <td><code>function printMessage() { console.log("Hello"); }</code></td>
                 </tr>
             </table>
-        </div>
     </section>
+    <br>
+    <iframe width="330" height="200" src="https://www.youtube.com/embed/847iSyAkEFk" title="Уроки JavaScript з нуля / #10 – Функції у мові JavaScript" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
     <footer>
         <p>&copy; 2024 Довідник з мови JavaScript</p>
     </footer>
